# clustering

./: README.md  pyproject.toml
assets/: simplified clustering.ipynb
simplified_clustering/: __init__.py  install-ru_core_news_sm.py
